Use Jlink to reduce size of appImage